--- a/index.html
+++ b/index.html
@@ -4,14 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <nav class="navbar">
+        <div class="nav-container">
+            <a href="index.html" class="logo">My Portfolio</a>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
     <header>
-        <h1>Welcome to My Portfolio</h1>
+        <h1 style="margin-bottom: 20px;">Hi, I'm Matias Tudela </h1> 
+        <p style="margin-bottom: 20px;">I build data driven solutions for <b>finance</b> and <b>business</b>.</p>
+        <p style="margin-bottom: 40px;">Currently working as a <b>Business Analyst</b> in the telco-industry in Chile.</p>
+        <p style="margin-bottom: 20px;">My main interests are:</p>
+        <ul>
+            <li>Financial Analysis</li>
+            <li>Business Intelligence</li>
+            <li>Process Automation</li>
+            <li>Machine Learning</li>
+            <li>Web Development</li>
+            <li>Programming, mostly Python!</li>
+            <li>Google Cloud Platform - Amazon Web Services</li>
+        </p>
     </header>
     <main>
-        <p>This is my portfolio where I showcase my projects!</p>
+        <p>Welcome to my Portfolio!</p>
+        <h1>Projects</h1>
     </main>
     <script src="script.js"></script>
 </body>
