update portfolio layout and add project details page

--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
+                <li><a href="pages/projects.html">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
     </nav>
     <header>
-        <h1 style="margin-bottom: 20px;">Hi, I'm Matias Tudela </h1> 
-        <p style="margin-bottom: 20px;">I build data driven solutions for <b>finance</b> and <b>business</b>.</p>
-        <p style="margin-bottom: 40px;">Currently working as a <b>Business Analyst</b> in the telco-industry in Chile.</p>
-        <p style="margin-bottom: 20px;">My main interests are:</p>
+        <h1>About Me</h1>
+        <p>Hi, I'm Matias Tudela</p> 
+        <p>I build data driven solutions for <b>finance</b> and <b>business</b>.</p>
+        <p>Currently working as a <b>Business Analyst</b> in the telco-industry in Chile.</p>
+        <p>My main interests are:</p>
         <ul>
             <li>Financial Analysis</li>
             <li>Business Intelligence</li>
@@ -34,8 +35,34 @@
         </p>
     </header>
     <main>
-        <p>Welcome to my Portfolio!</p>
-        <h1>Projects</h1>
+        <p, style="font-size: 24px;"><b>Welcome to my Portfolio!</b></p>
+        <h1>Check Out My Projects</h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>Project Name</th>
+                    <th>Description</th>
+                    <th>Link</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><a href="pages/projects.html#marko-viz" style="text-decoration: none;">Marko-Viz</a></td>
+                    <td>Portfolio optimization & visualization</td>
+                    <td><a href="https://marko-viz.streamlit.app/" target="_blank" style="text-decoration: none;">🔗 View Project</a></td>
+                </tr>
+                <tr>
+                    <td>Jobview</td>
+                    <td>Company reviews for job seekers</td>
+                    <td><a href="https://your-link.com" target="_blank" style="text-decoration: none;">🔗 View Project</a></td>
+                </tr>
+                <tr>
+                    <td>Power BI Dashboard</td>
+                    <td>Interactive analytics dashboard</td>
+                    <td><a href="https://your-link.com" target="_blank" style="text-decoration: none;">🔗 View Project</a></td>
+                </tr>
+            </tbody>
+        </table>
     </main>
     <script src="script.js"></script>
 </body>
