refactor: update navigation links and enhance content across portfolio pages

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
             <a href="index.html" class="logo">My Portfolio</a>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="pages/about.html">About Me</a></li>
                 <li><a href="pages/projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="pages/contact.html">Contact</a></li>
             </ul>
         </div>
     </nav>
     <header>
-        <h1>About Me</h1>
+        <h1>Hello there!</h1>
         <p>Hi, I'm Matias Tudela</p> 
         <p>I build data driven solutions for <b>finance</b> and <b>business</b>.</p>
-        <p>Currently working as a <b>Business Analyst</b> in the telco-industry in Chile.</p>
+        <p>Currently working as a <b>Senior Data Analyst</b> in the telco-industry in Chile.</p>
         <p>My main interests are:</p>
         <ul>
             <li>Financial Analysis</li>
@@ -35,8 +35,8 @@
         </p>
     </header>
     <main>
-        <p, style="font-size: 24px;"><b>Welcome to my Portfolio!</b></p>
-        <h1>Check Out My Projects</h1>
+        <p><strong>Welcome to my Portfolio!</strong></p>
+        <h2>Check Out My Projects</h2>
         <table>
             <thead>
                 <tr>
